#fix -- alignment in numbered heading ::before pseudo-elem

--- a/styles/default.sass
+++ b/styles/default.sass
@@ -172,7 +172,6 @@ h1, h2, h3, h4, h5, h6
 
     position: relative
     margin-right: 0.5em
-    margin-bottom: 0.5em
 
     color: colors.color("primary-highlight")
     font-family: typography.font("monospace")
